--- a/Cost Track/Cost Track/Views/Storyboards/Base.lproj/Main.storyboard
+++ b/Cost Track/Cost Track/Views/Storyboards/Base.lproj/Main.storyboard
@@ -117,6 +117,35 @@
             </objects>
             <point key="canvasLocation" x="513" y="1581"/>
         </scene>
+        <!--Group-->
+        <scene sceneID="l0d-b0-V6E">
+            <objects>
+                <tableViewController id="TkL-t3-yEh" customClass="GroupSelectTableViewController" customModule="Cost_Track" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="lCd-8Z-t4H">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="SelectGroupCell" id="phj-w6-GV9">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="phj-w6-GV9" id="oNu-71-bfc">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="TkL-t3-yEh" id="sTQ-Af-wqS"/>
+                            <outlet property="delegate" destination="TkL-t3-yEh" id="MQb-BO-p45"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Group" id="qKZ-aB-BT6"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9O6-nS-SkF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1990" y="-670"/>
+        </scene>
         <!--Cost sheet name-->
         <scene sceneID="aTx-MN-Tcw">
             <objects>
@@ -126,7 +155,7 @@
                         <rightBarButtonItems>
                             <barButtonItem title="Sett" id="7il-T7-ecw">
                                 <connections>
-                                    <action selector="settingsButtonPressed:" destination="egc-Yf-OgO" id="CVt-nW-aCI"/>
+                                    <segue destination="keZ-71-qab" kind="show" identifier="CostSheetSettingsSegue" id="YJF-c5-HmS"/>
                                 </connections>
                             </barButtonItem>
                             <barButtonItem title="Tran" id="JaV-8d-QVF">
@@ -316,7 +345,45 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BIP-RK-cOo" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1238" y="-652"/>
+            <point key="canvasLocation" x="513" y="-673"/>
+        </scene>
+        <!--Cost Sheet Settings-->
+        <scene sceneID="nbN-qB-VSN">
+            <objects>
+                <viewController id="keZ-71-qab" customClass="CostSheetSettingsViewController" customModule="Cost_Track" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="17e-T5-4eC">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ckB-9L-UlQ" customClass="CostSheetSettingsTableView" customModule="Cost_Track" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="64" width="375" height="559"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="ckB-9L-UlQ" firstAttribute="leading" secondItem="NJS-9W-LW8" secondAttribute="leading" id="0up-Ky-6Nf"/>
+                            <constraint firstItem="NJS-9W-LW8" firstAttribute="bottom" secondItem="ckB-9L-UlQ" secondAttribute="bottom" id="9sh-M8-9Qq"/>
+                            <constraint firstItem="NJS-9W-LW8" firstAttribute="trailing" secondItem="ckB-9L-UlQ" secondAttribute="trailing" id="9x0-Ig-DXY"/>
+                            <constraint firstItem="ckB-9L-UlQ" firstAttribute="top" secondItem="NJS-9W-LW8" secondAttribute="top" id="Jer-Pv-qX2"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="NJS-9W-LW8"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Cost Sheet Settings" id="pfY-rH-gZm">
+                        <barButtonItem key="rightBarButtonItem" title="Save" id="Ada-w1-dI4">
+                            <connections>
+                                <action selector="saveButtonPressed:" destination="keZ-71-qab" id="Tjh-DH-z9C"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="settingsTableView" destination="ckB-9L-UlQ" id="MkV-ra-exB"/>
+                        <segue destination="TkL-t3-yEh" kind="show" identifier="GroupSelectFromCostSheetSettingsSegue" id="evK-O8-eoa"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OaI-75-WBe" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1238" y="-669"/>
         </scene>
     </scenes>
 </document>
